refs #55067 - fix table alignment

--- a/app/assets/stylesheets/fae/modules/tables/_actions.scss
+++ b/app/assets/stylesheets/fae/modules/tables/_actions.scss
@@ -34,7 +34,7 @@ th {
   }
 
   &.-modified {
-    width: 200px;
+    width: 130px;
   }
 
   &.-delete {
@@ -64,6 +64,10 @@ td {
         color: $c-text;
       }
     }
+  }
+
+  &.-modified {
+    text-align: center;
   }
 }
 
